# otr_tgi

./: Cargo.toml
src/: argparse.rs  csv_converter.rs  draw_1darrays.rs  main.rs
src/otr_tgi_alg/: cs.rs  mod.rs  normal.rs
