[package]
name = "otr_tgi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
csv = "1.3.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
plotters = "0.3.5"
